# flowbot

./: .env.example  .gitattributes  .gitignore  ANTIGRAVITY_IMPLEMENTATION_GUIDE.md  Cargo.toml  GOOGLE_OAUTH_SETUP.md  PROVIDER_SETUP.md  README.md  TELEGRAM_SETUP.md  TELEGRAM_TESTING.md  TOOL_TESTING.md  TUI_SKILLS_DESIGN.md  VPS_DEPLOYMENT.md  WINDOWS_BUILD_FIX.md  auto-fix-builds.ps1  build-windows.ps1  build_check.txt  build_check_fetch.txt  build_error.txt  build_errors.txt  build_errors_core.txt  build_errors_core_2.txt  build_errors_core_3.txt  build_errors_core_4.txt  build_errors_core_6.txt  build_errors_core_7.txt  build_errors_v2.txt  build_errors_v3.txt  build_errors_v4.txt  build_fix.txt  build_log.txt  build_output.txt  build_retry.txt  build_serial.txt  build_success.txt  build_test.txt  check_cli_fix_log.txt  check_cli_fix_log_2.txt  check_cli_log.txt  check_error.txt  (+75 more)
.cargo/: config.toml
.nanobot/: sessions.db  tokens.json
configs/: multi-replica-sticky-redis.env  provider_capacity_profiles.toml  single-replica.env
crates/nanobot-cli/: Cargo.toml
crates/nanobot-cli/src/: main.rs
crates/nanobot-cli/src/service/: mod.rs  systemd.rs  windows.rs
crates/nanobot-cli/src/ui/: logger.rs  mod.rs  tui.rs
crates/nanobot-cli/src/web/: mod.rs
crates/nanobot-core/: Cargo.toml  build_errors.txt
crates/nanobot-core/.nanobot/todos/: todo_test_tenant.json
crates/nanobot-core/examples/: validate_features.rs  verify_gateway_registry.rs  verify_integrity.rs  verify_pairing.rs  verify_telegram_router.rs
crates/nanobot-core/migrations/: 001_context_tree.sql
crates/nanobot-core/src/: antigravity.rs  blocking.rs  config.rs  events.rs  google.rs  health.rs  heartbeat.rs  http_client.rs  intelligent_policy.rs  intelligent_router.rs  lib.rs  logging.rs  metrics.rs  oauth.rs  observability.rs  persistence.rs  proactive_security.rs  sessions.rs  shutdown.rs  telegram.rs  token_manager.rs  variant_discovery.rs  websocket.rs  workspace.rs
crates/nanobot-core/src/agent/: mod.rs  personality.rs  supervisor.rs
crates/nanobot-core/src/browser/: actions.rs  client.rs  mod.rs  tools.rs
crates/nanobot-core/src/cache/: mod.rs
crates/nanobot-core/src/config/: agent_loader.rs  agent_manifest.rs  encrypted_storage.rs  mod.rs
crates/nanobot-core/src/console/: mod.rs
crates/nanobot-core/src/context/: migration.rs  mod.rs  tree.rs
crates/nanobot-core/src/cron/: isolated_agent.rs  mod.rs  run_log.rs
crates/nanobot-core/src/distributed/: mod.rs
crates/nanobot-core/src/doctor/: mod.rs  telegram.rs
crates/nanobot-core/src/gateway/: adapter.rs  agent_manager.rs  channel.rs  discord_adapter.rs  google_chat_adapter.rs  mod.rs  onboarding.rs  registry.rs  router.rs  skill_chat.rs  slack_adapter.rs  teams_adapter.rs  telegram_adapter.rs  terminal_channel.rs  web_adapter.rs
crates/nanobot-core/src/llm/: config.rs  design_sketch.rs  meta_provider.rs  mod.rs
crates/nanobot-core/src/mcp/: client.rs  manager.rs  mod.rs  types.rs
crates/nanobot-core/src/memory/: embedding_provider.rs  mod.rs  vector_store.rs  watcher.rs
crates/nanobot-core/src/pairing/: db.rs  mod.rs
crates/nanobot-core/src/script/: mod.rs
crates/nanobot-core/src/security/: admin_token.rs  audit.rs  audit_basic.rs  content_security.rs  mod.rs  quantum_policy.rs  secrets.rs  session_secrets.rs  setup.rs  web_password.rs
crates/nanobot-core/src/server/: admin.rs  mod.rs
crates/nanobot-core/src/service/: macos.rs  manager.rs  mod.rs  systemd.rs  types.rs  windows.rs
crates/nanobot-core/src/setup/: channel_instructions.rs  discord.rs  mod.rs  offline_models.rs  slack.rs  telegram.rs  templates.rs  wizard.rs  workspace_mgmt.rs
crates/nanobot-core/src/skills/: config.rs  loader.rs  metadata.rs  mod.rs  tui.rs
crates/nanobot-core/src/system/: audit.rs  mod.rs  resources.rs
crates/nanobot-core/src/tools/: batch.rs  channel_confirmation.rs  cli_confirmation.rs  cli_wrapper.rs  commands.rs  confirmation.rs  cron.rs  definitions.rs  docker.rs  docker_executor.rs  edit_file_tool.rs  executor.rs  fetch.rs  filesystem.rs  gateway_confirmation.rs  guard.rs  kill_process_tool.rs  list_directory_tool.rs  llm_task.rs  mod.rs  permissions.rs  policy.rs  process.rs  question.rs  read_file_tool.rs  read_process_output_tool.rs  run_command_tool.rs  script_eval_tool.rs  search.rs  sessions.rs  spawn_process_tool.rs  stt.rs  subagent_tools.rs  telegram_confirmation.rs  todos.rs  tts.rs  web_fetch_tool.rs  web_search_tool.rs  websearch.rs  write_file_tool.rs  (+1 more)
crates/nanobot-core/tests/: compile_fail.rs  new_tools_integration.rs  process_rolling_soak.rs
crates/nanobot-core/tests/compile_fail/: call_side_effect_without_token.rs  call_side_effect_without_token.stderr  mint_key_outside_executor.rs  mint_key_outside_executor.stderr  mint_token_outside_executor.rs  mint_token_outside_executor.stderr  run_command_without_token.rs  run_command_without_token.stderr
docs/: hot-path-blocking-map.md  load-smoke-llm-queue-c200.json  load-smoke-llm-queue-latest.jsonl  load-smoke-llm-queue.md  mock-active-handler-check-c50.json  mock-active-handler-check.json  mock-provider-benchmark-latest.jsonl  mock-provider-benchmark.md  mock-provider-tuning-focused.jsonl  mock-provider-tuning-latest.jsonl  mock-provider-tuning.md  production-readiness-real-provider-antigravity-low-cost.md  real-provider-low-cost-benchmark-latest.jsonl  real-provider-low-cost-benchmark.md  reject-timing-summary.txt  release-notes.md
examples/: debug_gemini.rs  test_auth.rs  test_features.rs  test_tools.rs  verify_discord.rs  verify_slack.rs
scripts/: benchmark_mock_provider_matrix.sh  benchmark_mock_tuning.sh  benchmark_real_provider_low_cost.sh  check_chaos_ci_summaries.py  check_gateway_atomic_inflight_admission.py  check_gateway_multi_replica_startup_guard.py  check_gateway_terminal_frames.py  check_metric_label_policy.py  check_no_spawn_blocking_without_semaphore.sh  check_no_sqlite_sync_in_gateway.sh  check_no_std_fs_in_async_paths.sh  check_no_sync_tool_entrypoint.sh  check_process_dedupe_race_summary.py  check_process_rolling_soak_summary.py  (+17 more)
(+837 files in other folders)
