[workspace]
members = [
    "crates/nanobot-core",
    "crates/nanobot-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
html-escape = "0.2"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "multipart"] }
rig-core = "0.29"
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.5"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
rusqlite = { version = "0.36", features = ["bundled"] }
rand = "0.9"
once_cell = "1.19"
inquire = "0.9"
fastembed = "5.8"
tokio-cron-scheduler = "0.13"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16"
tracing-appender = "0.2"
async-trait = "0.1"
walkdir = "2.5"
pulldown-cmark = "0.12"
teloxide = { version = "0.12", features = ["macros"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
colored = "3.1.1"
toml = "0.9.11"
notify = "6.1"
ignore = "0.4"
tui-logger = "0.18.1"
log = "0.4.29"
human-panic = "2.0.0"
sysinfo = "0.30"
headless_chrome = { version = "1.0", features = ["fetch"] }
rust-embed = "8.0"
jsonwebtoken = "9.2"
wasmtime = "26.0"
wasmtime-wasi = "26.0"
rhai = "1.20"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rpassword = "7.3"



