[package]
name = "nanobot-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "nanobot_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
html-escape = { workspace = true }
reqwest = { workspace = true }
rig-core = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.12"
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
inquire = { workspace = true }
fastembed = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = "26.0"
rhai = "1.19"
tokio-cron-scheduler = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
teloxide = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
sysinfo = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
rpassword = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Slack integration
slack-morphism = { workspace = true }

# Discord integration
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }

# Browser automation (optional)
chromiumoxide = { version = "0.7", optional = true }

[features]
default = []
browser = ["dep:chromiumoxide"]
examples = []

[[example]]
name = "validate_features"
required-features = ["examples", "browser"]

[[example]]
name = "verify_gateway_registry"
required-features = ["examples"]

[[example]]
name = "verify_telegram_router"
required-features = ["examples"]

[[example]]
name = "verify_pairing"
required-features = ["examples"]

[[example]]
name = "verify_integrity"
required-features = ["examples"]

[dev-dependencies]
tempfile = "3.10"
rusqlite = { workspace = true }
